--- a/public/styles.css
+++ b/public/styles.css
@@ -86,6 +86,8 @@ html body .allNotes {
   flex-wrap: wrap;
 }
 html body .note {
+  display: flex;
+  justify-content: space-between;
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
@@ -94,20 +96,29 @@ html body .note {
   margin: 16px;
   float: left;
 }
-html body .note h1 {
+html body .note .note__content {
+  display: flex;
+  flex-direction: column;
+}
+html body .note .note__content h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
 }
-html body .note p {
+html body .note .note__content p {
   font-size: 1.1em;
   margin-bottom: 10px;
   white-space: pre-wrap;
   word-wrap: break-word;
 }
-html body .note button {
+html body .note .note__buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+html body .note .note__buttons button {
   position: relative;
   float: right;
-  margin-right: 10px;
   color: #f5ba13;
   border: none;
   width: 36px;
@@ -115,6 +126,9 @@ html body .note button {
   cursor: pointer;
   outline: none;
   background: transparent;
+}
+html body .note .note__buttons .grip_button {
+  margin-bottom: 1rem;
 }
 html body footer {
   position: absolute;
