--- a/public/styles.css
+++ b/public/styles.css
@@ -93,6 +93,7 @@ html body .note {
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
   width: 240px;
+  height: 8rem;
   margin: 16px;
   float: left;
 }
@@ -109,6 +110,8 @@ html body .note .note__content p {
   margin-bottom: 10px;
   white-space: pre-wrap;
   word-wrap: break-word;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 html body .note .note__buttons {
   display: flex;
