--- a/public/styles.scss
+++ b/public/styles.scss
@@ -101,6 +101,7 @@ html {
       box-shadow: 0 2px 5px #ccc;
       padding: 10px;
       width: 240px;
+      height: 8rem;
       margin: 16px;
       float: left;
 
@@ -116,6 +117,8 @@ html {
           margin-bottom: 10px;
           white-space: pre-wrap;
           word-wrap: break-word;
+          text-overflow: ellipsis;
+          overflow: hidden;
         }
       }
 
